# conan_project_template

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.travis/: install.sh  run.sh
cmake/modules/: CodeCoverage.cmake  FindGMock.cmake
scripts/: gcovr
src/: CMakeLists.txt
tests/: coverage.ignore
tests/feature/: CMakeLists.txt
tests/feature/features/: 001-Dummy.feature
tests/feature/features/step_definitions/: dummy_steps.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: dummy_test.cpp  gmock_test.cpp
